--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,10 +18,10 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:launchMode="singleInstance"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:launchMode="singleInstance">
+        android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -49,7 +49,11 @@
             </intent-filter>
         </receiver>
 
-        <activity android:name=".PrivacySetup"></activity>
+        <activity android:name=".PrivacySetup" />
+
+        <service
+            android:name=".scanAndIgnore"
+            android:exported="false"></service>
     </application>
 
 </manifest>
